--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-fastclick": "^2.1.2",
     "react-headroom": "^2.1.3",
     "react-onclickoutside": "^5.7.1",
+    "react-player": "^0.14.3",
     "react-progress-button": "^5.0.2",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
