--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-fastclick": "^2.1.2",
+    "react-ga": "^2.1.2",
     "react-headroom": "^2.1.3",
     "react-onclickoutside": "^5.7.1",
     "react-player": "^0.14.3",
