Added firebase + signup form

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "axios": "^0.15.3",
     "breakpoint-sass": "^2.7.1",
     "classnames": "^2.2.5",
+    "firebase": "^3.7.2",
     "lodash": "^4.17.2",
     "node-uuid": "^1.4.7",
     "normalize.css": "^5.0.0",
